--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,19 @@
-# Fichiers Terraform
-**/.terraform/*
-!**.terraform/plugins
-
-# Fichiers d'état
+# Terraform
+.terraform/
 *.tfstate
 *.tfstate.*
-terraform.tfstate.backup
-
-# Fichiers de crash
-crash.log
-crash.*.log
-
-# Fichiers de variables
+.terraform.lock.hcl
 *.tfvars
+crash.log
+override.tf
+override.tf.json
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
